# texteditor

./: CMakeLists.txt
.cache/clangd/index/: core.cpp.C72FD67EFE8B387E.idx  core.hpp.33E3EC2E6057A077.idx  main.cpp.DAA15A824B11691B.idx  window.cpp.C61C2CC7A094655F.idx  window.hpp.E73481507A568D27.idx
include/: core.hpp
include/config/: config.hpp  configDefaults.hpp  configKeys.hpp
include/editor/: buffer.hpp  window.hpp
scripts/: build_and_run.sh
src/: config.lua  core.cpp  main.cpp
src/config/: config.cpp  config.txt
src/editor/: buffer.cpp  window.cpp
